Update প্রাইম ফ্যাক্টর, নাম্বার অফ ডিভিসর এবং সাম অফ ডিভিসরস.md

--- a/প্রাইম ফ্যাক্টর, নাম্বার অফ ডিভিসর এবং সাম অফ ডিভিসরস.md
+++ b/প্রাইম ফ্যাক্টর, নাম্বার অফ ডিভিসর এবং সাম অফ ডিভিসরস.md
@@ -37,3 +37,38 @@ vector<long long> Prime_Factorization(long long n) {
 কিন্তু এবার যদি সংখ্যাটি ১৭ হয়, তাহলে ভিতরের লুপটি কখনই কাজ করবেনা। আর বাহিরের for লুপ $\sqrt{n}$ সংখ্যকবারই চলবে। এই কেসটি হল কোডের worst কেস। আর আমরা সবসময় worst কেস কমপ্লেক্সিটিকেই কোডের কমপ্লেক্সিটি হিসেবে চিন্তা করি। তাই কোডটির কমপ্লেক্সিটি হবে O($\sqrt{n}$)। <br>
 
 আশা করি এ পর্যন্ত তোমরা বুঝতে পেরেছো। কমপ্লেক্সিটি নিয়ে তোমাদের ক্লিয়ার ধারণা না থাকলে তোমরা <a href="#">এই</a> লেখাটি পড়ে আসতে পারো।<br> এখন প্রশ্ন হচ্ছে এর চেয়েও efficient ভাবে কি তুমি প্রাইম ফ্যাক্টর বের করতে পারবে? মনে করো, তোমাকে বলা হল ১ থেকে ১০<sup>৬</sup> পর্যন্ত সকল নাম্বারের প্রাইম ফ্যাক্টর বের করতে। তখন তুমি কি করবে? আমরা এইমাত্র যে কোডটি শিখলাম এভাবে <b>N</b> সংখ্যক নাম্বারের প্রাইম ফ্যাক্টর বের করলে কমপ্লেক্সিটি হবে O($N\sqrt{n}$) যা ১০<sup>৯</sup> এর কাছাকাছি কোন নাম্বার। বুঝতেই পারছো এভাবে তাহলে আমরা এই সমস্যার সমাধান করতে পারবোনা। এর জন্য আমাদের কে এর চেয়ে ভাল কোন সমাধান খুঁজে বের করতে হবে।
+
+#### Smallest Prime Factor (SPF):
+এবার তোমাদেরকে দেখাবো কিভাবে আমরা প্রাইম ফ্যাক্টরের কাজটি $\log(n)$ টাইমে করতে পারি। তার আগে তোমাদেরকে <a href="#">সীভ অফ এরাথোসেন্থেসিস</a> দিয়ে কিভাবে O($N\log(log(n))$) টাইমে ১ থেকে N পর্যন্ত সকল প্রাইম নাম্বারকে আলাদা করে ফেলা যায় তা ভালভাবে বুঝতে হবে। <br>
+আমরা সীভ এর আইডিয়াটি কাজে লাগিয়ে ১ থেকে ১০<sup>৭</sup> পর্যন্ত সকল নাম্বারের <b><i>Smallest Prime Factor (SPF)</b></i> বা সবচেয়ে ছোট প্রাইম ডিভিজরকে স্টোর করে রাখবো। একাজের মাধ্যমে আমরা কিভাবে লাভবান হচ্ছি?
+
+```c++
+void SPF() {
+    //শুরুতে সব নাম্বারের ছোট প্রাইম ডিভিজর হিসেবে নিজেদেরকেই এসাইন করা হয়েছে 
+    for (int i = 1; i <= 1e7; i++)
+        spf[i] = i;
+ 
+    //কাজটি সীভ দিয়ে প্রাইম বের করার মতই
+    for (long long i = 2; i * i <= 1e7; i++) {
+        if (spf[i] == i) { //চেক করছি সংখ্যাটি প্রাইম কিনা
+            for (long long j = i * i; j <= 1e7; j += i)
+                if (spf[j] == j) //ছোট প্রাইম ফ্যাক্টরটি অলরেডি এসাইন করা হল কিনা
+                    spf[j] = i;
+        }
+    }
+}
+
+vector<long long> Prime_Factorization(long long x) {
+    vector<int> factors;
+    while (x != 1) { //প্রতি স্টেপে x কে সবচেয়ে ছোট প্রাইম ফ্যাক্টর বা SPF দিয়ে ভাগ করছি
+        factors.push_back(spf[x]);
+        x = x / spf[x];
+    }
+    return factors;
+}
+
+```
+আমরা কিভাবে আমাদের কোডের টাইম কমিয়ে এনেছি তা নিয়ে বিস্তারিত আলোচনা করার জন্য কোডগুলো এখানে আমি দেখিয়ে দিচ্ছি। তোমরা অবশ্যই কোডগুলো মুখস্থ না করে, বুঝে, নিজে নিজে করার চেষ্ঠা করবে।<br>
+তোমরা যারা সীভ দিয়ে প্রাইম বের করার প্রক্রিয়াটি ভাল্ভাবে বুঝো তাদের জন্য এই কোডটি অনেকটাই সহজ। আমরা একটু বুদ্ধি খাটিয়ে সীভ এর কাজটি দিয়েই SPF বের করার কাজটি করে ফেলছি। কিভাবে?<br>
+SPF ফাংশনটিতে সব নাম্বারের SPF ভ্যালু নিজের ভ্যালু হিসেবেই অ্যাসাইন করা হয়েছে। আমাদের সীভ এর ক্ষেত্রে কোন সংখ্যা প্রাইম কিনা তা যাচাই করার জন্য একটি Mark[] অ্যারে রাখতে হয়। কোন সংখ্যা যদি মার্ক না হয়ে থাকে তাহলে আমরা তাকে পরের লুপটিতে যেতে দেই এবং এই সংখ্যাটি দিয়ে যে সকল নাম্বার প্রাইম নয় তাদেরকে মার্ক করে ফেলি। এখানেও আমরা SPF ফাংশনে সেই একই কাজটি করছি। যেহেতু প্রথমত সবার নিজের ভ্যালু হিসেবে নিজেকেই অ্যাসাইন করা আছে, তাই আমরা দ্বিতীয় লুপে যেতে দেয়ার আগে চেক করে দেখবো এই নাম্বারটি প্রাইম কিনা বা ঐ নাম্বারের ঘরে ভ্যালু হিসেবে এখনও ঐ নাম্বারকেই পাচ্ছি কিনা। এবার দ্বিতীয় লুপে, যে সকল নাম্বারের কাছে আমরা যেতে পারছি এরা কেউই প্রাইম নাম্বার নয় এ ব্যাপারে আমরা নিশ্চিত। যে নাম্বারগুলো প্রাইম নয় তাদের SPF ভ্যালু যদি SPF[] অ্যারেতে সেট না করা হয়ে থাকে কেবল সেই ক্ষেত্রেই আমরা ভ্যালু সেট করবো। কারণ আমরা সকল নাম্বারের সবচাইতে ছোট প্রাইম ফ্যাক্টরকে জমা রাখতে চাইছি। পূর্বে যদি কোন নাম্বার অলরেডি অন্য কোন নাম্বারের SPF ভ্যালু হিসেবে সেট হয়ে যায় তাহলে তার জন্য আর কোন ছোট নাম্বারকে SPF হিসেবে পাওয়ার কোন সুযোগ নেই। কারণ আমরা লুপ চালাচ্ছি ২ থেকে তার বড় সংখ্যাগুলোর দিকে। আশা করি SPF ভ্যালু বের করার কৌশলটি তোমরা বুঝতে পেরেছো। <br>
+![alt text](https://github.com/Md-Johaer-Plabon/AlgoBangla/blob/main/Contents/sievepic.jpg)
