Update প্রাইম ফ্যাক্টর, নাম্বার অফ ডিভিসর এবং সাম অফ ডিভিসরস.md

--- a/প্রাইম ফ্যাক্টর, নাম্বার অফ ডিভিসর এবং সাম অফ ডিভিসরস.md
+++ b/প্রাইম ফ্যাক্টর, নাম্বার অফ ডিভিসর এবং সাম অফ ডিভিসরস.md
@@ -74,3 +74,6 @@ SPF ফাংশনটিতে সব নাম্বারের SPF ভ্য
 <div align="centre>
  <img src="https://github.com/Md-Johaer-Plabon/AlgoBangla/blob/main/Contents/sievepic.jpg" width="350px" height="350px">
 </div>
+<div align="center">
+    <img src="https://github.com/Md-Johaer-Plabon/AlgoBangla/blob/main/Contents/sievepic.jpg">
+</div>
