--- a/প্রাইম ফ্যাক্টর, নাম্বার অফ ডিভিসর এবং সাম অফ ডিভিসরস.md
+++ b/প্রাইম ফ্যাক্টর, নাম্বার অফ ডিভিসর এবং সাম অফ ডিভিসরস.md
@@ -73,5 +73,5 @@ vector<long long> Prime_Factorization(long long x) {
 SPF ফাংশনটিতে সব নাম্বারের SPF ভ্যালু নিজের ভ্যালু হিসেবেই অ্যাসাইন করা হয়েছে। আমাদের সীভ এর ক্ষেত্রে কোন সংখ্যা প্রাইম কিনা তা যাচাই করার জন্য একটি Mark[] অ্যারে রাখতে হয়। কোন সংখ্যা যদি মার্ক না হয়ে থাকে তাহলে আমরা তাকে পরের লুপটিতে যেতে দেই এবং এই সংখ্যাটি দিয়ে যে সকল নাম্বার প্রাইম নয় তাদেরকে মার্ক করে ফেলি। এখানেও আমরা SPF ফাংশনে সেই একই কাজটি করছি। যেহেতু প্রথমত সবার নিজের ভ্যালু হিসেবে নিজেকেই অ্যাসাইন করা আছে, তাই আমরা দ্বিতীয় লুপে যেতে দেয়ার আগে চেক করে দেখবো এই নাম্বারটি প্রাইম কিনা বা ঐ নাম্বারের ঘরে ভ্যালু হিসেবে এখনও ঐ নাম্বারকেই পাচ্ছি কিনা। এবার দ্বিতীয় লুপে, যে সকল নাম্বারের কাছে আমরা যেতে পারছি এরা কেউই প্রাইম নাম্বার নয় এ ব্যাপারে আমরা নিশ্চিত। যে নাম্বারগুলো প্রাইম নয় তাদের SPF ভ্যালু যদি SPF[] অ্যারেতে সেট না করা হয়ে থাকে কেবল সেই ক্ষেত্রেই আমরা ভ্যালু সেট করবো। কারণ আমরা সকল নাম্বারের সবচাইতে ছোট প্রাইম ফ্যাক্টরকে জমা রাখতে চাইছি। পূর্বে যদি কোন নাম্বার অলরেডি অন্য কোন নাম্বারের SPF ভ্যালু হিসেবে সেট হয়ে যায় তাহলে তার জন্য আর কোন ছোট নাম্বারকে SPF হিসেবে পাওয়ার কোন সুযোগ নেই। কারণ আমরা লুপ চালাচ্ছি ২ থেকে তার বড় সংখ্যাগুলোর দিকে। আশা করি SPF ভ্যালু বের করার কৌশলটি তোমরা বুঝতে পেরেছো। <br>
 
 <div align="center">
-    <img src="https://github.com/Md-Johaer-Plabon/AlgoBangla/blob/main/Contents/sievepic.jpg">
+    <img src="https://github.com/Md-Johaer-Plabon/AlgoBangla/blob/main/Contents/sievepic.jpg/247/300/300">
 </div>
