Update প্রাইম ফ্যাক্টর, নাম্বার অফ ডিভিসর এবং সাম অফ ডিভিসরস.md

--- a/প্রাইম ফ্যাক্টর, নাম্বার অফ ডিভিসর এবং সাম অফ ডিভিসরস.md
+++ b/প্রাইম ফ্যাক্টর, নাম্বার অফ ডিভিসর এবং সাম অফ ডিভিসরস.md
@@ -70,8 +70,12 @@ vector<long long> Prime_Factorization(long long x) {
 ```
 আমরা কিভাবে আমাদের কোডের টাইম কমিয়ে এনেছি তা নিয়ে বিস্তারিত আলোচনা করার জন্য কোডগুলো এখানে আমি দেখিয়ে দিচ্ছি। তোমরা অবশ্যই কোডগুলো মুখস্থ না করে, বুঝে, নিজে নিজে করার চেষ্ঠা করবে।<br>
 তোমরা যারা সীভ দিয়ে প্রাইম বের করার প্রক্রিয়াটি ভাল্ভাবে বুঝো তাদের জন্য এই কোডটি অনেকটাই সহজ। আমরা একটু বুদ্ধি খাটিয়ে সীভ এর কাজটি দিয়েই SPF বের করার কাজটি করে ফেলছি। কিভাবে?<br>
-SPF ফাংশনটিতে সব নাম্বারের SPF ভ্যালু নিজের ভ্যালু হিসেবেই অ্যাসাইন করা হয়েছে। আমাদের সীভ এর ক্ষেত্রে কোন সংখ্যা প্রাইম কিনা তা যাচাই করার জন্য একটি Mark[] অ্যারে রাখতে হয়। কোন সংখ্যা যদি মার্ক না হয়ে থাকে তাহলে আমরা তাকে পরের লুপটিতে যেতে দেই এবং এই সংখ্যাটি দিয়ে যে সকল নাম্বার প্রাইম নয় তাদেরকে মার্ক করে ফেলি। এখানেও আমরা SPF ফাংশনে সেই একই কাজটি করছি। যেহেতু প্রথমত সবার নিজের ভ্যালু হিসেবে নিজেকেই অ্যাসাইন করা আছে, তাই আমরা দ্বিতীয় লুপে যেতে দেয়ার আগে চেক করে দেখবো এই নাম্বারটি প্রাইম কিনা বা ঐ নাম্বারের ঘরে ভ্যালু হিসেবে এখনও ঐ নাম্বারকেই পাচ্ছি কিনা। এবার দ্বিতীয় লুপে, যে সকল নাম্বারের কাছে আমরা যেতে পারছি এরা কেউই প্রাইম নাম্বার নয় এ ব্যাপারে আমরা নিশ্চিত। যে নাম্বারগুলো প্রাইম নয় তাদের SPF ভ্যালু যদি SPF[] অ্যারেতে সেট না করা হয়ে থাকে কেবল সেই ক্ষেত্রেই আমরা ভ্যালু সেট করবো। কারণ আমরা সকল নাম্বারের সবচাইতে ছোট প্রাইম ফ্যাক্টরকে জমা রাখতে চাইছি। পূর্বে যদি কোন নাম্বার অলরেডি অন্য কোন নাম্বারের SPF ভ্যালু হিসেবে সেট হয়ে যায় তাহলে তার জন্য আর কোন ছোট নাম্বারকে SPF হিসেবে পাওয়ার কোন সুযোগ নেই। কারণ আমরা লুপ চালাচ্ছি ২ থেকে তার বড় সংখ্যাগুলোর দিকে। আশা করি SPF ভ্যালু বের করার কৌশলটি তোমরা বুঝতে পেরেছো। <br>
+SPF ফাংশনটিতে সব নাম্বারের SPF ভ্যালু নিজের ভ্যালু হিসেবেই অ্যাসাইন করা হয়েছে। আমাদের সীভ এর ক্ষেত্রে কোন সংখ্যা প্রাইম কিনা তা যাচাই করার জন্য একটি Mark[] অ্যারে রাখতে হয়। কোন সংখ্যা যদি মার্ক না হয়ে থাকে তাহলে আমরা তাকে পরের লুপটিতে যেতে দেই এবং এই সংখ্যাটি দিয়ে যে সকল নাম্বার প্রাইম নয় তাদেরকে মার্ক করে ফেলি। এখানেও আমরা SPF ফাংশনে সেই একই কাজটি করছি। যেহেতু প্রথমত সবার নিজের ভ্যালু হিসেবে নিজেকেই অ্যাসাইন করা আছে, তাই আমরা দ্বিতীয় লুপে যেতে দেয়ার আগে চেক করে দেখবো এই নাম্বারটি প্রাইম কিনা বা ঐ নাম্বারের ঘরে ভ্যালু হিসেবে এখনও ঐ নাম্বারকেই পাচ্ছি কিনা। এবার দ্বিতীয় লুপে, যে সকল নাম্বারের কাছে আমরা যেতে পারছি এরা কেউই প্রাইম নাম্বার নয় এ ব্যাপারে আমরা নিশ্চিত। যে নাম্বারগুলো প্রাইম নয় তাদের SPF ভ্যালু যদি SPF[] অ্যারেতে সেট না করা হয়ে থাকে কেবল সেই ক্ষেত্রেই আমরা ভ্যালু সেট করবো। কারণ আমরা সকল নাম্বারের সবচাইতে ছোট প্রাইম ফ্যাক্টরকে জমা রাখতে চাইছি। পূর্বে যদি কোন নাম্বার অলরেডি অন্য কোন নাম্বারের SPF ভ্যালু হিসেবে সেট হয়ে যায় তাহলে তার জন্য আর কোন ছোট নাম্বারকে SPF হিসেবে পাওয়ার কোন সুযোগ নেই। কারণ আমরা লুপ চালাচ্ছি ২ থেকে তার বড় সংখ্যাগুলোর দিকে। <br>
 
 <div align="center">
     <img src="https://github.com/Md-Johaer-Plabon/AlgoBangla/blob/main/Contents/sievepic.jpg" height="300" width="450">
 </div>
+<br>
+ছবিটির গোলাপি রঙের ঘরগুলোর SPF ভ্যালু হবে ২। খেয়াল করে দেখো গোলাপি রঙের ঘরগুলোর সকল সংখ্যাই হচ্ছে জোড় সংখ্যা। তারপর মেজেন্ডা রঙের ঘরগুলোর SPF ভ্যালু হবে ৩। এখানে ৬ নাম্বার ঘরটিতে ৩ যেতে পারলেও, যেহেতু ৬ নাম্বার ঘরটি অলরেডি একবার ২ দিয়ে মার্ক হয়ে গিয়েছে তাই আমরা ৩ কে তার ভ্যালু হিসেবে আর সেট করবোনা। ঠিক তেমনই ভাবে ৫ নিয়ে আমরা ১৫ নাম্বার ঘরে যেতে পারলেও, যেহেতু ৩ দিয়ে ১৫ নাম্বার ঘরের ভ্যালু অলরেডি একবার সেট করা হয়ে গিয়েছে, তাই ১৫ এর SPF ভ্যালু হবে ৩। এভাবে ৫ এর জন্য লাল রঙ ও ৭ এর জন্য নীল রঙ দিয়ে ঘরগুলোকে ভরাট করা হয়েছে। <br>
+আশা করি SPF ভ্যালু বের করার কৌশলটি তোমরা বুঝতে রেছো। <br>
+
