Update প্রাইম ফ্যাক্টর, নাম্বার অফ ডিভিসর এবং সাম অফ ডিভিসরস.md

--- a/প্রাইম ফ্যাক্টর, নাম্বার অফ ডিভিসর এবং সাম অফ ডিভিসরস.md
+++ b/প্রাইম ফ্যাক্টর, নাম্বার অফ ডিভিসর এবং সাম অফ ডিভিসরস.md
@@ -38,7 +38,7 @@ vector<long long> Prime_Factorization(long long n) {
 
 আশা করি এ পর্যন্ত তোমরা বুঝতে পেরেছো। কমপ্লেক্সিটি নিয়ে তোমাদের ক্লিয়ার ধারণা না থাকলে তোমরা <a href="#">এই</a> লেখাটি পড়ে আসতে পারো।<br> এখন প্রশ্ন হচ্ছে এর চেয়েও efficient ভাবে কি তুমি প্রাইম ফ্যাক্টর বের করতে পারবে? মনে করো, তোমাকে বলা হল ১ থেকে ১০<sup>৬</sup> পর্যন্ত সকল নাম্বারের প্রাইম ফ্যাক্টর বের করতে। তখন তুমি কি করবে? আমরা এইমাত্র যে কোডটি শিখলাম এভাবে <b>N</b> সংখ্যক নাম্বারের প্রাইম ফ্যাক্টর বের করলে কমপ্লেক্সিটি হবে O($N\sqrt{n}$) যা ১০<sup>৯</sup> এর কাছাকাছি কোন নাম্বার। বুঝতেই পারছো এভাবে তাহলে আমরা এই সমস্যার সমাধান করতে পারবোনা। এর জন্য আমাদের কে এর চেয়ে ভাল কোন সমাধান খুঁজে বের করতে হবে।
 
-#### Smallest Prime Factor (SPF):
+### Smallest Prime Factor (SPF):
 এবার তোমাদেরকে দেখাবো কিভাবে আমরা প্রাইম ফ্যাক্টরের কাজটি $\log(n)$ টাইমে করতে পারি। তার আগে তোমাদেরকে <a href="#">সীভ অফ এরাথোসেন্থেসিস</a> দিয়ে কিভাবে O(N$\log(log(n))$) টাইমে ১ থেকে N পর্যন্ত সকল প্রাইম নাম্বারকে আলাদা করে ফেলা যায় তা ভালভাবে বুঝতে হবে। <br>
 আমরা সীভ এর আইডিয়াটি কাজে লাগিয়ে ১ থেকে ১০<sup>৭</sup> পর্যন্ত সকল নাম্বারের <b><i>Smallest Prime Factor (SPF)</b></i> বা সবচেয়ে ছোট প্রাইম ডিভিজরকে স্টোর করে রাখবো। একাজের মাধ্যমে আমরা কিভাবে লাভবান হচ্ছি?
 
