Update প্রাইম ফ্যাক্টর, নাম্বার অফ ডিভিসর এবং সাম অফ ডিভিসরস.md

--- a/প্রাইম ফ্যাক্টর, নাম্বার অফ ডিভিসর এবং সাম অফ ডিভিসরস.md
+++ b/প্রাইম ফ্যাক্টর, নাম্বার অফ ডিভিসর এবং সাম অফ ডিভিসরস.md
@@ -77,9 +77,7 @@ SPF ফাংশনটিতে সব নাম্বারের SPF ভ্য
 </div>
 <br>
 ছবিটির দিকে দেখো, গোলাপি রঙের ঘরগুলোর SPF ভ্যালু হবে ২। আমরা জানি, প্রথমেই ২ দিয়ে সকল জোড় সংখ্যার ঘরগুলি মার্ক হয়ে যাবে। তাই গোলাপি রঙের ঘরগুলোর সকল সংখ্যাই হচ্ছে জোড় সংখ্যা। এভাবে আকাশি রঙের ঘরগুলোর SPF ভ্যালু হল ৩। ্কারণ এ ঘরগুলোতে সবার আগে আমরা ৩ নিয়েই পৌঁছাতে পারি। এখানে ৬ নাম্বার ঘরটিতে ৩ যেতে পারলেও, যেহেতু ৬ নাম্বার ঘরটি অলরেডি একবার ২ দিয়ে মার্ক হয়ে গিয়েছে তাই আমরা ৩ কে তার ভ্যালু হিসেবে আর সেট করবোনা। কারণ আমরা প্রত্যেকটি নাম্বারের সবচাইতে ছোট প্রাইম ফ্যাক্টরটি স্টোর করছি। ঠিক তেমনই ভাবে ৫ নিয়ে আমরা ১৫ নাম্বার ঘরে যেতে পারলেও, যেহেতু ৩ দিয়ে ১৫ নাম্বার ঘরের ভ্যালু অলরেডি একবার সেট করা হয়ে গিয়েছে, তাই ১৫ এর SPF ভ্যালু হবে ৩। এভাবে ৫ এর জন্য লাল রঙ ও ৭ এর জন্য নীল রঙ দিয়ে ঘরগুলোকে ভরাট করা হয়েছে। তুমি চাইলে খাতা কলমেও এ কাজটি নিজে নিজে করে দেখতে পারো।<br>
-আশা করি SPF ভ্যালু বের করার কৌশলটি তোমরা বুঝতে পেরেছো। <br>
-
-
+আশা করি SPF ভ্যালু বের করার কৌশলটি তোমরা বুঝতে পেরেছো। <br><br>
 এবার আমরা <b>Prime_Factorization</b> ফাংশনটিতে "x"  এর প্রাইম ফ্যাক্টরগুলো বের করবো। আমরা প্রতিবারে "x" কে তার SPF ভ্যালু দিয়ে ভাগ করতে থাকবো যতক্ষণ পর্যন্ত "x" এর ভ্যালু ১ না হয়। <br>
 
 <div align="center">
