Update প্রাইম ফ্যাক্টর, নাম্বার অফ ডিভিসর এবং সাম অফ ডিভিসরস.md

--- a/প্রাইম ফ্যাক্টর, নাম্বার অফ ডিভিসর এবং সাম অফ ডিভিসরস.md
+++ b/প্রাইম ফ্যাক্টর, নাম্বার অফ ডিভিসর এবং সাম অফ ডিভিসরস.md
@@ -83,3 +83,7 @@ SPF ফাংশনটিতে সব নাম্বারের SPF ভ্য
 <div align="center">
     <img src="https://github.com/Md-Johaer-Plabon/AlgoBangla/blob/main/Contents/Factortree.png" height="450" width="350">
 </div>
+এই ট্রি এর মাধ্যমে আমরা সহজেই আমাদের ফ্যাক্টর বের করার লুপটিকে সিমুলেট করতে পারি। দেখো, আমরা ৪২০ এর প্রাইম ফ্যাকটরগুলোকে বের করতে চাই। যেহেতু ৪২০ একটি জোড় সংখ্যা, তাই এর SPF ভ্যালু হবে ২। ২ দিয়ে ১ বার ভাগ করার পর আমাদের "x" এর ভ্যালু হবে ২১০ এবং ২১০ এর SPF ভ্যালুও হচ্ছে ২। ২১০ কে ২ দিয়ে ভাগ করে আমরা নতুন "x" পাবো ১০৫। ১০৫ এর SPF ভ্যালু হল ৩। একইভাবে ১০৫ থেকে আমরা পাবো ৩৫, যার SPF ভ্যালু ৫। ৩৫ কে ৫ দিয়ে ভাগ করে আমরা ৭ পাবো। এবং পরিশেষে ৭ কে ৭ দিয়ে ভাগ করে আমরা ১ পেয়ে যাবো! আমাদের ৪২০ এর প্রাইম ফ্যাক্টর বের করা শেষ।
+
+৪২০ = ২<sup>২</sup> x ৩ x ৫ x ৭
+---
