Update প্রাইম ফ্যাক্টর, নাম্বার অফ ডিভিসর এবং সাম অফ ডিভিসরস.md

--- a/প্রাইম ফ্যাক্টর, নাম্বার অফ ডিভিসর এবং সাম অফ ডিভিসরস.md
+++ b/প্রাইম ফ্যাক্টর, নাম্বার অফ ডিভিসর এবং সাম অফ ডিভিসরস.md
@@ -87,3 +87,5 @@ SPF ফাংশনটিতে সব নাম্বারের SPF ভ্য
 
 ৪২০ = ২<sup>২</sup> x ৩ x ৫ x ৭
 ---
+এই কোডটির টাইম কমপ্লেক্সিটি কিভাবে log(n) হল? আমরা এখন আমাদের কোডের worst কেস খুঁজে বের করবো। ১ থেকে ১০<sup>৭</sup> পর্যন্ত নাম্বারগুলোর মধ্যে যে নাম্বারকে সবচাইতে বেশিবার ২ দিয়ে ভাগ করা যায় সেই নাম্বারটিই আমাদের এই কোডের জন্য worst কেস। কারণ কেবলমাত্র সেই নাম্বারটির জন্যই প্রাইম ফ্যাক্টরের লুপটি সবচাইতে বেশি বার ঘুরবে। নাম্বারটি খুঁজে বের করার দায়িত্ব তোমার।<br>
+আমরা আগেই শিখেছি যে, একটি নাম্বারকে ২ দিয়ে ভাগ করা যায় log<sub>2</sub>(n) সংখ্যকবার। তাই কোডটির কমপ্লেক্সিটি O(log<sub>2</sub>(n)) বা O(log(n))।
