Update প্রাইম ফ্যাক্টর, নাম্বার অফ ডিভিসর এবং সাম অফ ডিভিসরস.md

--- a/প্রাইম ফ্যাক্টর, নাম্বার অফ ডিভিসর এবং সাম অফ ডিভিসরস.md
+++ b/প্রাইম ফ্যাক্টর, নাম্বার অফ ডিভিসর এবং সাম অফ ডিভিসরস.md
@@ -89,3 +89,20 @@ SPF ফাংশনটিতে সব নাম্বারের SPF ভ্য
 ---
 এই কোডটির টাইম কমপ্লেক্সিটি কিভাবে log(n) হল? আমরা এখন আমাদের কোডের worst কেস খুঁজে বের করবো। ১ থেকে ১০<sup>৭</sup> পর্যন্ত নাম্বারগুলোর মধ্যে যে নাম্বারকে সবচাইতে বেশিবার ২ দিয়ে ভাগ করা যায় সেই নাম্বারটিই আমাদের এই কোডের জন্য worst কেস। কারণ কেবলমাত্র সেই নাম্বারটির জন্যই প্রাইম ফ্যাক্টরের লুপটি সবচাইতে বেশি বার ঘুরবে। নাম্বারটি খুঁজে বের করার দায়িত্ব তোমার।<br>
 আমরা আগেই শিখেছি যে, একটি নাম্বারকে ২ দিয়ে ভাগ করা যায় log<sub>2</sub>(n) সংখ্যকবার। তাই কোডটির কমপ্লেক্সিটি O(log<sub>2</sub>(n)) বা O(log(n))।
+
+### Number of Divisors (NOD)
+তোমরা যদি ডিভিজর নিয়ে এই লেখাটি পড়ে থাকো, তাহলে নিশ্চয়ই জানো যে, যেকোন সংখ্যার মোট ডিভিজরের সংখ্যা আমরা সহজেই O($\sqrt{n}$) এ বের করে ফেলতে পারি। কিন্তু এখন আমরা দেখবো, কিভাবে SPF ব্যবহার করে আমরা এই কাজটিই O(logn) টাইমে করে ফেলতে পারি। তার জন্য তোমাকে SPF বের করার কাজটি ভালভাবে বুঝতে হবে এবং পাশাপাশি কিছুটা কম্বিনেটরিক্স ও জানতে হবে। <br>
+
+১২ = ২<sup>২</sup> x ৩
+---
+ভালভাবে খেয়াল করো, ১২ এর সবচাইতে ছোট প্রাইম ফ্যাক্টর হল ২ এবং ২ দিয়ে ১২ কে সর্বোচ্চ ২ বার ভাগ করা যায়। আলোচনার সুবিধার্থে প্রাইম ফ্যাক্টর ৩ কে নিয়ে আমরা পরে ভাববো। <br>
+এখন, শুধুমাত্র ২<sup>২</sup> কে নিয়ে আমরা ৩টি ভিন্ন ভিন্ন ডিভিজর পেতে পারি। সেগুলো হচ্ছে {১, ২, ৪}। আবার, শুধুমাত্র ৩ কে প্রাইম ফ্যাক্টর হিসেবে চিন্তা করলে আমরা ভিন্ন ডিভিজর পাবো ২ টি, {১, ৩}। তুমি ভালভাবে খেয়াল করলে বুঝতে পারবে যে, আমরা প্রতিটা প্রাইম ফ্যাক্টরের জন্য টোটাল ডিভিজর পাচ্ছি ঐ প্রাইম ফ্যাক্টরের পাওয়ারের থেকে ১ টি বেশি। 
+
+X = P<sub>1</sub><sup>n<sub>1</sub></sup> x P<sub>2</sub><sup>n<sub>2</sub></sup> x P<sub>3</sub><sup>n<sub>3</sub></sup>
+---
+অর্থাৎ, শুধুমাত্র P<sub>1</sub> প্রাইম ফ্যাক্টরটির জন্য তুমি ভিন্ন ভিন্ন ডিভিজর পাবে (n<sub>1</sub>+1) টি।  অনুরূপভাবে, শুধুমাত্র P<sub>২</sub> প্রাইম ফ্যাক্টরটির জন্য তুমি ভিন্ন ভিন্ন ডিভিজর পাবে (n<sub>2</sub>+1) টি। আমরা সবসময়ই ১ টি ডিভিজর বেশি পাচ্ছি। কারণ সকল সংখ্যারই একটা কমন ডিভিজর হচ্ছে ১। এখন তোমার মনে প্রশ্ন হতে পারে যে, ১ কে আমরা কেন এতবার ডিভিজর হিসেবে নিচ্ছি? চিন্তা করে দেখ, ১ কে আমরা বারবার নিচ্ছি কারণ আমরা প্রতিটা প্রাইম ফ্যাক্টরের জন্য পৃথক পৃথকভাবে শুধুমাত্র ঐ প্রাইম ফ্যাক্টরের জন্য যে ভিন্ন ভিন্ন ডিভিজরগুলো পাই, তা বের করছি। এবার আমরা যদি বিষয়টাকে সেট এর মত করে চিন্তা করি তাহলে কাজটি আমাদের জন্য খুবই সোজা।<br>
+ধরো, n<sub>1</sub> = 2, n<sub>2</sub> = 2, n<sub>3</sub> = 1 এবং P<sub>1</sub><sup>n<sub>1</sub></sup> এর জন্য ডিভিজরের সেট {1, a<sub>1</sub>,  a<sub>3</sub>}, P<sub>2</sub><sup>n<sub>2</sub></sup> = {1, b<sub>1</sub>,  b<sub>2</sub>} ও P<sub>3</sub><sup>n<sub>3</sub></sup> = {1, c<sub>1</sub>}। <br>তাহলে তিনটি ভিন্ন ভিন্ন সেট থেকে আমরা কতগুলো ভিন্ন ভিন্ন ডিভিজর পাবো?
+
+NOD = {1, a<sub>1</sub>,  a<sub>3</sub>} x {1, b<sub>1</sub>,  b<sub>2</sub>} x {1, c<sub>1</sub>}
+---
+এই সেটগুলোর কার্টেসিয়ান প্রোডাক্ট বের করলে যতগুলো pair পাওয়া যাবে, X এর ঠিক ততগুলোই ডিভিজর রয়েছে। সেট এর মাল্টিপ্লিকেশন প্রিন্সিপল অনুসারে আমরা মোট এলিমেন্ট পাবো (n<sub>1</sub>+1) x (n<sub>2</sub>+1) x (n<sub>3</sub>+1) টি অর্থাৎ (২ + ১) x (২ + ১) x (১ + ১) বা ১৮ টি। তাহলে ১২ এর ডিভিজর সংখ্যা হবে (২ + ১) x (১ +১) বা ৬ টি। <br> বুঝতেই পারছো যে, আমরা যদি SPF দিয়ে প্রাইম ফ্যাক্টরগুলো logn টাইমে বের করে ফেলি, তাহলে logn টাইমে Number of Divisors বা NOD ও বের করে ফেলতে পারবো। 
