Update প্রাইম ফ্যাক্টর, নাম্বার অফ ডিভিসর এবং সাম অফ ডিভিসরস.md

--- a/প্রাইম ফ্যাক্টর, নাম্বার অফ ডিভিসর এবং সাম অফ ডিভিসরস.md
+++ b/প্রাইম ফ্যাক্টর, নাম্বার অফ ডিভিসর এবং সাম অফ ডিভিসরস.md
@@ -105,4 +105,4 @@ X = P<sub>1</sub><sup>n<sub>1</sub></sup> x P<sub>2</sub><sup>n<sub>2</sub></sup
 
 NOD = {1, a<sub>1</sub>,  a<sub>3</sub>} x {1, b<sub>1</sub>,  b<sub>2</sub>} x {1, c<sub>1</sub>}
 ---
-এই সেটগুলোর কার্টেসিয়ান প্রোডাক্ট বের করলে যতগুলো pair পাওয়া যাবে, X এর ঠিক ততগুলোই ডিভিজর রয়েছে। সেট এর মাল্টিপ্লিকেশন প্রিন্সিপল অনুসারে আমরা মোট এলিমেন্ট পাবো (n<sub>1</sub>+1) x (n<sub>2</sub>+1) x (n<sub>3</sub>+1) টি অর্থাৎ (২ + ১) x (২ + ১) x (১ + ১) বা ১৮ টি। তাহলে ১২ এর ডিভিজর সংখ্যা হবে (২ + ১) x (১ +১) বা ৬ টি। <br> বুঝতেই পারছো যে, আমরা যদি SPF দিয়ে প্রাইম ফ্যাক্টরগুলো logn টাইমে বের করে ফেলি, তাহলে logn টাইমে Number of Divisors বা NOD ও বের করে ফেলতে পারবো। 
+এই সেটগুলোর কার্টেসিয়ান প্রোডাক্ট বের করলে যতগুলো pair পাওয়া যাবে, X এর ঠিক ততগুলোই ডিভিজর রয়েছে। সেট এর মাল্টিপ্লিকেশন প্রিন্সিপল অনুসারে আমরা মোট এলিমেন্ট পাবো (n<sub>1</sub>+1) x (n<sub>2</sub>+1) x (n<sub>3</sub>+1) টি অর্থাৎ (২ + ১) x (২ + ১) x (১ + ১) বা ১৮ টি। এখন তুমি সহজেই ১২ এর ডিভিজর সংখ্যা বের করতে পারবে। ১২ এর ডিভিজর হবে (২ + ১) x (১ +১) বা ৬ টি। <br> বুঝতেই পারছো যে, আমরা যদি SPF দিয়ে প্রাইম ফ্যাক্টরগুলো logn টাইমে বের করে ফেলি, তাহলে logn টাইমে Number of Divisors বা NOD ও বের করে ফেলতে পারবো। 
