Update প্রাইম ফ্যাক্টর, নাম্বার অফ ডিভিসর এবং সাম অফ ডিভিসরস.md

--- a/প্রাইম ফ্যাক্টর, নাম্বার অফ ডিভিসর এবং সাম অফ ডিভিসরস.md
+++ b/প্রাইম ফ্যাক্টর, নাম্বার অফ ডিভিসর এবং সাম অফ ডিভিসরস.md
@@ -26,7 +26,7 @@ vector<long long> Prime_Factorization(long long n) {
     return factorization;
 }
 ```
-<b>"এখানে i ডিভিজর n সংখ্যাটিতে কতবার রয়েছে তা বের করার অন্য আমরা while লুপ চালিয়ে দিয়েছি এবং প্রতিবারে n কে i দিয়ে ভাগ করে ফেলছি যেন i ডিভিজর হিসেবে n এর মধ্যে আর না থাকে। আমাদের লক্ষ্য হল n এর সকল ডিভিজর সরিয়ে ফেলে n কে ১ বানিয়ে ফেলা।"<br></b>
+<b>"এখানে i ডিভিজর n সংখ্যাটিতে কতবার রয়েছে তা বের করার অন্য আমরা while লুপ চালিয়ে দিয়েছি এবং প্রতিবারে n কে i দিয়ে ভাগ করে ফেলছি যেন i ডিভিজর হিসেবে n এর মধ্যে আর না থাকে। আমাদের লক্ষ্য হল n এর সকল ডিভিজর সরিয়ে n কে ১ বানিয়ে ফেলা।"<br></b>
 
 যেহেতু একটি সংখ্যাকে তার ডিভিজর ছাড়া অন্য কোন সংখ্যাদিয়ে ভাগ করা যায়না, তাই একটি সংখ্যাকে তার ডিভিজরগুলো দিয়ে ভাগ করতে থাকলে একসময় সংখ্যাটিকে ১ বানিয়ে ফেলা সম্ভব। তাহলে কোডের পরের অংশে কেন সংখ্যাটি ১ এর চেয়ে বড় কিনা তা চেক করছি? একটু কাগজে-কলমে চেষ্ঠা করলেই তুমি তা পেয়ে যাবে। এটা খুঁজে বের করার দায়িত্ব তোমার।<br>
 
