Update প্রাইম ফ্যাক্টর, নাম্বার অফ ডিভিসর এবং সাম অফ ডিভিসরস.md

--- a/প্রাইম ফ্যাক্টর, নাম্বার অফ ডিভিসর এবং সাম অফ ডিভিসরস.md
+++ b/প্রাইম ফ্যাক্টর, নাম্বার অফ ডিভিসর এবং সাম অফ ডিভিসরস.md
@@ -105,4 +105,44 @@ X = P<sub>1</sub><sup>n<sub>1</sub></sup> x P<sub>2</sub><sup>n<sub>2</sub></sup
 
 NOD = {1, a<sub>1</sub>,  a<sub>3</sub>} x {1, b<sub>1</sub>,  b<sub>2</sub>} x {1, c<sub>1</sub>}
 ---
-এই সেটগুলোর কার্টেসিয়ান প্রোডাক্ট বের করলে যতগুলো pair পাওয়া যাবে, X এর ঠিক ততগুলোই ডিভিজর রয়েছে। সেট এর মাল্টিপ্লিকেশন প্রিন্সিপল অনুসারে আমরা মোট এলিমেন্ট পাবো (n<sub>1</sub>+1) x (n<sub>2</sub>+1) x (n<sub>3</sub>+1) টি অর্থাৎ (২ + ১) x (২ + ১) x (১ + ১) বা ১৮ টি। এখন তুমি সহজেই ১২ এর ডিভিজর সংখ্যা বের করতে পারবে। ১২ এর ডিভিজর হবে (২ + ১) x (১ +১) বা ৬ টি। <br> বুঝতেই পারছো যে, আমরা যদি SPF দিয়ে প্রাইম ফ্যাক্টরগুলো logn টাইমে বের করে ফেলি, তাহলে logn টাইমে Number of Divisors বা NOD ও বের করে ফেলতে পারবো। 
+এই সেটগুলোর কার্টেসিয়ান প্রোডাক্ট বের করলে যতগুলো pair পাওয়া যাবে, X এর ঠিক ততগুলোই ডিভিজর রয়েছে। সেট এর মাল্টিপ্লিকেশন প্রিন্সিপল অনুসারে আমরা মোট এলিমেন্ট পাবো (n<sub>1</sub>+1) x (n<sub>2</sub>+1) x (n<sub>3</sub>+1) টি অর্থাৎ (২ + ১) x (২ + ১) x (১ + ১) বা ১৮ টি। এখন তুমি সহজেই ১২ এর ডিভিজর সংখ্যা বের করতে পারবে। ১২ এর ডিভিজর হবে (২ + ১) x (১ +১) বা ৬ টি। <br> বুঝতেই পারছো যে, আমরা যদি SPF দিয়ে প্রাইম ফ্যাক্টরগুলো logn টাইমে বের করে ফেলি, তাহলে logn টাইমে Number of Divisors বা NOD ও বের করে ফেলতে পারবো। <br>
+
+### Sum of Divisors (SOD)
+তোমাকে যদি বলা হয়, যেকোন একটি সংখ্যার সকল ডিভিজরের যোগফল বা Sum বের করতে, তাহলে তোমার কোডের কমপ্লেক্সিটি কত হবে? আমরা O($\sqrt{n}$) এ যেকোন সংখ্যার সকল ডিভিজর বের করতে পারি, তাই কাজটি O($\sqrt{n}$) এ করা খুবই সোজা। কিন্তু এখন আমরা শিখবো, কিভাবে SPF দিয়ে O(logn) এ কোন সংখ্যার Sum of Divisors (SOD) বের করা যায়। <br> তবে একটা বিষইয়ে তোমাকে অবশ্যই খেয়াল রাখতে হবে, আমাদের কোন সংখ্যার SPF বের করার জন্য সীভ দরকার হয়। আর আমরা সীভ দিয়ে সর্বোচ্চ ১০<sup>৭</sup> পর্যন্ত SPF ভ্যালু জেনারেট করতে পারি। <b>তাই শুধুমাত্র ১০<sup>৭</sup> পর্যন্ত যেকোন সংখ্যার SOD বা NOD তুমি logn টাইমে বের করতে পারবে।</b><br>
+এবার আমরা কিভাবে logn টাইমে SOD এর করা যায় তা শিখবো। <br>
+"৯" সংখ্যাটির ক্ষেত্রে চিন্তা কর, ৯ এর প্রাইম ফ্যাক্টরাইজেশন হল $৯ = {৩^২}$। তাহলে ৯ এর ডিভিজরগুলো কি কি?
+
+
+৯ এর ডিভিজরের সেট, s<sub>1</sub>= {${৩^০, ৩^১, ৩^২}$}<br>
+৯ এর SOD = ${৩^০ + ৩^১ + ৩^২}$
+---
+আবার,<br>
+১২ এর ডিভিজরের সেট, s<sub>1</sub> = {${২^০, ২^১, ২^২}$} এবং s<sub>২</sub> = {${৩^০, ৩^১}$}<br>
+১২ এর SOD = $({২^০ + ২^১ + ২^২}) \cdot ({৩^০ + ৩^১})$ 
+---
+অর্থাৎ n = ${p_{1}^{e_{1}}} \cdot {p_{2}^{e_{2}}}$ হলে, 
+n এর SOD হবেঃ <br>
+$(1 + p_{1} + {p_{1}^{2}} + {p_{1}^{3}} +\cdot\cdot\cdot + {p_{1}^{e_{1}}}) \cdot (1 + p_{2} + {p_{2}^{2}} + {p_{2}^{3}} +\cdot\cdot\cdot + {p_{2}^{e_{2}}})$<br>
+আবার,<br>
+$(1 + p_{1} + {p_{1}^{2}} + {p_{1}^{3}} +\cdot\cdot\cdot + {p_{1}^{e_{1}}}) = \frac{p_{1}^{e_{1} + 1} - 1}{p_{1} - 1}$<br>
+---
+তাহলে,<br>
+SOD = $\frac{p_{1}^{e_{1} + 1} - 1}{p_{1} - 1} \cdot \frac{p_{2}^{e_{2} + 1} - 1}{p_{2} - 1}$
+---
+এভাবে আমরা series sum এর সূত্র দিয়ে সহজেই SOD বের করে ফেলতে পারি। তুমি SPF পারলে এই কোডটি লেখা তোমার জন্য খুবই সোজা। আমার কোডটি দেখার আগে অবশ্যই তুমি আগে নিজে চেষ্ঠা করবে, তা নাহলে তোমার ইমপ্লিমেন্টেশন করার সক্ষমতা বাড়বেনা।
+```c++
+long long Sum_of_Divisors(long long x) {
+    long long SOD = 1;
+    while (x != 1) { 
+        long long factor = spf[x], count = 0;
+        while(x % factor == 0){ 
+            x = x / factor;
+            count++;
+        }
+        SOD *= (long long)pow(factor, count + 1) - 1; 
+        SOD /= (factor - 1);
+    }
+    return SOD;
+}
+```
+কোডটির কমপ্লেক্সিটি হবে O($\log{n}$)। আশা করি বুঝতে পেরেছো।
