--- a/প্রাইম ফ্যাক্টর, নাম্বার অফ ডিভিসর এবং সাম অফ ডিভিসরস.md
+++ b/প্রাইম ফ্যাক্টর, নাম্বার অফ ডিভিসর এবং সাম অফ ডিভিসরস.md
@@ -113,11 +113,11 @@ NOD = {1, a<sub>1</sub>,  a<sub>3</sub>} x {1, b<sub>1</sub>,  b<sub>2</sub>} x 
 "৯" সংখ্যাটির ক্ষেত্রে চিন্তা কর, ৯ এর প্রাইম ফ্যাক্টরাইজেশন হল $৯ = {৩^২}$। তাহলে ৯ এর ডিভিজরগুলো কি কি?
 
 
-৯ এর ডিভিজরের সেট, s<sub>1</sub>= {${৩^০, ৩^১, ৩^২}$}<br>
+৯ এর ডিভিজরের সেট, s<sub>1</sub>= ${৩^০, ৩^১, ৩^২}$<br>
 ৯ এর SOD = ${৩^০ + ৩^১ + ৩^২}$
 ---
 আবার,<br>
-১২ এর ডিভিজরের সেট, s<sub>1</sub> = {${২^০, ২^১, ২^২}$} এবং s<sub>২</sub> = {${৩^০, ৩^১}$}<br>
+১২ এর ডিভিজরের সেট, s<sub>1</sub> = ${২^০, ২^১, ২^২}$ এবং s<sub>২</sub> = ${৩^০, ৩^১$<br>
 ১২ এর SOD = $({২^০ + ২^১ + ২^২}) \cdot ({৩^০ + ৩^১})$ 
 ---
 অর্থাৎ n = ${p_{1}^{e_{1}}} \cdot {p_{2}^{e_{2}}}$ হলে, 
