Update: Added Complexity in Seive.

--- a/সিভ অফ এরাটোস্থেনেস.md
+++ b/সিভ অফ এরাটোস্থেনেস.md
@@ -5,11 +5,6 @@
 
 আলোচনার সুবিধার্থে আমরা N =১০০ ধরে নিতে পারি। আরেকটা ভেক্টর primes  নিয়ে নিলাম, যেখানে সকল প্রাইম সংখ্যাগুলোকে আমরা রিজার্ভ করবো। 
 
-
-
-
-
-
 **Seive of Eratosthenes** কিভাবে কাজ করে সেটা আমরা এখন বিস্তারিত আলোচনা করব। আমরা জানি ১ অবশ্যই একটি মৌলিক সংখ্যা নয়, তাই তাকে আমরা বাদ দিয়ে আলোচনা করতে পারি। তাহলে সবচেয়ে ছোট মৌলিক সংখ্যাটি হচ্ছে ২। এবং আমরা এও বলতে পারি, এমন কোন সংখ্যা মৌলিক সংখ্যা হবে না যাদেরকে ২ দ্বারা ভাগ করা যায়। তাহলে আমাদের প্রথম কাজ হচ্ছে ২ কে প্রাইম হিসেবে কালেক্ট করা এবং এরপর দুই দ্বারা বিভাজ্য বাকি সকল সংখ্যাকে (৪,৬,৮,১০,...) মার্ক করে দেয়া যে তারা কেউই মৌলিক সংখ্যা নয়।
 
 এবার আমরা ৩ এর জন্য অনুরূপ অপারেশন পারফর্ম করব। অর্থাৎ, ৩ কে আমরা প্রাইম হিসেবে কালেক্ট করব এবং ৩ দ্বারা বিভাজ্য সকল সংখ্যাকে (৬,৯,১২,১৫,...) আমরা চিহ্নিত করব যে তারা কেউ মৌলিক সংখ্যা নয়।
@@ -55,4 +50,14 @@ void seive() {
 
 আরেকটা  ছোট optimization আছে, যখন i এর মান বড় এবং i*i ইন্টিজার ওভারফ্লো করে। এই অংশটুকু তোমাকে চিন্তা করার জন্য রেখে দিলাম। 
 
+
+
+কমপ্লেক্সিটি: 
+আশা করি সিভ এর কারসাজি এতক্ষনে বুঝে গেছো। এবার তাহলে এর কমপ্লেক্সিটি নিয়ে আলোচনা করা যাক। আচ্ছা, প্রথম সিভের কোডটি লক্ষ্য করে বলতে পারবে N এর যেকোনো মানের জন্য প্রায় কতবার ইটারেশন এর প্রযোজন হয়? আমরা এখানে প্রতিবার চেক করছি সংখ্যাটি প্রাইম কিনা, অতঃপর যদি প্রাইম হয়, তাহলে তার N-পর্যন্ত সব গুণিতক কে আমরা নন-প্রাইম হিসেবে মার্ক করছি। তাহলে-
+2 এর জন্য আমরা লুপ চালাচ্ছি 4, 6, 8, 10, ..., <= N পর্যন্ত  N/2 বার (প্রায়)
+3 এর জন্য আমরা লুপ চালাচ্ছি 6, 9, 12, 15, ..., <= N পর্যন্ত N/3 বার (প্রায়)
+5 এর জন্য আমরা লুপ চালাচ্ছি 10, 15, 20, 25, ..., <= N পর্যন্ত N/5 বার (প্রায়)
+
+তাহলে মতো কতগুলো ইটারেশন হতে পারে? উত্তর N/2 + N/3 + N/5 + N/7 + ..., যার মান প্রায় N log N । 
+কিন্তু দ্বিতীয় কোডটিতে আমরা যেহেতু প্রতিটি প্রাইম এর জন্য তার বর্গ থেকে ইটারেশন শুরু করেছি, তাই তখন ইটারেশন কমে N/2² + N/3² + N/5² + N/7² + ... + (N /p²) = N log (log N ) তে পরিণত হয়। মজার না?
 
