Updated seive image.

--- a/সিভ অফ এরাটোস্থেনেস.md
+++ b/সিভ অফ এরাটোস্থেনেস.md
@@ -13,6 +13,13 @@
 
 সারকথা হচ্ছে আমরা ২ থেকে N পর্যন্ত সকল সংখ্যার জন্য প্রথমত চেক করব যে ঐ সংখ্যাটি নন-প্রাইম হিসেবে অলরেডি মার্ক হয়েছে কিনা। যদি না হয়ে থাকে, তাহলে তাকে আমরা প্রাইম হিসেবে কালেক্ট করব এবং তার সকল ডিভিসরকে আমরা নন-প্রাইম হিসেবে মার্ক করব।
 
+<div align="center">
+    <img src="https://github.com/Md-Johaer-Plabon/AlgoBangla/blob/main/Contents/seive_of_eratosthenes.png" height="300" width="450">
+</div>
+<br>
+
+এতক্ষন ধরে আমরা যা কিছু বুঝতে পারলাম, তাকে যদি কোডে রিপ্লেস করি, তাহলে নিচের কোডটির মতো হবে:
+
 ```cpp
 vector<int>primes;
 bool color[N+5];
