--- a/সিভ অফ এরাটোস্থেনেস.md
+++ b/সিভ অফ এরাটোস্থেনেস.md
@@ -62,10 +62,12 @@ void seive() {
 ## কমপ্লেক্সিটি: 
 
 আশা করি সিভ এর কারসাজি এতক্ষনে বুঝে গেছো। এবার তাহলে এর কমপ্লেক্সিটি নিয়ে আলোচনা করা যাক। আচ্ছা, প্রথম সিভের কোডটি লক্ষ্য করে বলতে পারবে N এর যেকোনো মানের জন্য প্রায় কতবার ইটারেশন এর প্রযোজন হয়? আমরা এখানে প্রতিবার চেক করছি সংখ্যাটি প্রাইম কিনা, অতঃপর যদি প্রাইম হয়, তাহলে তার N-পর্যন্ত সব গুণিতক কে আমরা নন-প্রাইম হিসেবে মার্ক করছি। তাহলে-
-2 এর জন্য আমরা লুপ চালাচ্ছি 4, 6, 8, 10, ..., <= N পর্যন্ত  N/2 বার (প্রায়)
-3 এর জন্য আমরা লুপ চালাচ্ছি 6, 9, 12, 15, ..., <= N পর্যন্ত N/3 বার (প্রায়)
-5 এর জন্য আমরা লুপ চালাচ্ছি 10, 15, 20, 25, ..., <= N পর্যন্ত N/5 বার (প্রায়)
+
+2 এর জন্য আমরা লুপ চালাচ্ছি 4, 6, 8, 10, ..., <= N পর্যন্ত  N/2 বার (প্রায়) </br>
+3 এর জন্য আমরা লুপ চালাচ্ছি 6, 9, 12, 15, ..., <= N পর্যন্ত N/3 বার (প্রায়) </br>
+5 এর জন্য আমরা লুপ চালাচ্ছি 10, 15, 20, 25, ..., <= N পর্যন্ত N/5 বার (প্রায়) </br>
 
 তাহলে মতো কতগুলো ইটারেশন হতে পারে? উত্তর N/2 + N/3 + N/5 + N/7 + ..., যার মান প্রায় N log N । 
+
 কিন্তু দ্বিতীয় কোডটিতে আমরা যেহেতু প্রতিটি প্রাইম এর জন্য তার বর্গ থেকে ইটারেশন শুরু করেছি, তাই তখন ইটারেশন কমে N/2² + N/3² + N/5² + N/7² + ... + (N /p²) = N log (log N ) তে পরিণত হয়। মজার না?
 
