--- a/মডুলার এরিথমেটিক এবং বিগমড.md
+++ b/মডুলার এরিথমেটিক এবং বিগমড.md
@@ -5,7 +5,7 @@
 মনে করো তোমাকে খুব বড় দুটি সংখ্যা যেমন ২<sup>৯৯</sup> আর ২<sup>১০০</sup> যোগ করতে  দেয়া হয়েছে। তোমাকে সংখ্যাদুটোর যোগফল পূর্ণসংখ্যাটি দিতে হবে না, শুধুমাত্র শেষের ৬-৭ টি ডিজিট দিলেই চলবে। তাহলে এখন তুমি কিভাবে করবে? প্রশ্নটির উত্তর যদি তুমি এক ঝলকে চিন্তা ছাড়াই বলে ফেলতে না পারো, তাহলে এই লিখাটি তোমার জন্যই, স্বাগতম তোমাকে। আপাতত প্রশ্নটি মাথায় রেখে সামনে যাওয়া যাক।
 
 # ভাগশেষ
-কোনো সংখ্যা *N* কে ম্যাথমেটিক্যালি প্রকাশ করার একটা সুন্দর পদ্ধতি হলো- $ N=D*Q+r $, যেখানে *D* হচ্ছে ভাজক (Divisor), *Q* হচ্ছে  ভাগফল (Quotient), আর *r* হচ্ছে ভাগশেষ (reminder)। আচ্ছা, ২৭ কে ৫ দিয়ে ভাগ করলে ভাগশেষ কত? বিড়বিড় করে হয়তো হিসেবে করে ফেলেছো, উত্তর ২। এবার যদি বলি, -২৭ কে ৫ দিয়ে ভাগ করলে ভাগশেষ কত, তাহলে তোমার উত্তর কত? 
+কোনো সংখ্যা *N* কে ম্যাথমেটিক্যালি প্রকাশ করার একটা সুন্দর পদ্ধতি হলো- *N=D*Q+r*, যেখানে *D* হচ্ছে ভাজক (Divisor), *Q* হচ্ছে  ভাগফল (Quotient), আর *r* হচ্ছে ভাগশেষ (reminder)। আচ্ছা, ২৭ কে ৫ দিয়ে ভাগ করলে ভাগশেষ কত? বিড়বিড় করে হয়তো হিসেবে করে ফেলেছো, উত্তর ২। এবার যদি বলি, -২৭ কে ৫ দিয়ে ভাগ করলে ভাগশেষ কত, তাহলে তোমার উত্তর কত? 
 
 উত্তর এর আগে জানা দরকার আসলে ভাগশেষের কনসেপ্ট আমাদের কতটুকু সুস্পষ্ট।  ভাগশেষ হচ্ছে কোনো পূর্ণসংখ্যাকে অন্য পূর্ণসংখ্যা দিয়ে ভাগ করলে অবশিষ্ট অংশ। ২৭ কে যখন আমরা ৫ দিয়ে ভাগ করি, তখন আমরা মূলত ২৭ এর সমান/ছোট সবচেয়ে বড় ৫ এর গুণিতক খুঁজে বের করি (৫*৫=২৫)। তাহলে ভাগশেষ হবে ২৭-২৫=২। তাহলে যখন আমরা -২৭ কে ৫ দিয়ে ভাগ করবো, তখন তার সমান/ছোট সবচেয়ে বড় ৫ এর গুণিতক কত? -৩০ নাকি -২৫? লজিক্যালি কখনোই -২৫ হবে না, কারণ -২৫ অবশ্যই -২৭ অপেক্ষা বড় । তাহলে ভাগশেষ হবে -২৭-(-৩০) = -২৭+৩০ = ৩। আরেকটা বিষয় হচ্ছে, যদি আমরা -২৫ কে ভুলক্রমে নিয়েও  ফেলি,তাহলে ভাগশেষ হবে -২৭-(-২৫) = -২৭+২৫ = -২। জ্ঞাতার্থে জানিয়ে রাখি, ভাগশেষ, তথা "অবশিষ্ট" কখনোই ঋণাত্মক হতে পারে না।
 
@@ -37,11 +37,13 @@ int getReminder(int n, int m) {
 $$ -27 \mod 5 = (-27 + 5*10) \mod 5 = 23 \mod 5 = 3 $$
 
 দ্বিতীয় পদ্ধতি টি অনেক সিম্পল, সহজ এবং বোধগম্য। ভাগশেষের সাথে ৫ এর যেকোনো গুণিতক যোগ করে যদি আবার ভাগশেষ বের করি, তাহলে কি আমরা নতুন কোনো ভাগশেষ পাবো? কখনোই সম্ভব না, কারণ সবসময় গুণিতক পরিমান বাড়ছে, আবার ভাগ হয়ে ভাগশেষের সমান হয়ে যাচ্ছে। এই প্রেক্ষিতে বলতে পারি,
+
 $$ (N \mod M) = ((N \mod M) + M) \mod M $$
 
 এই ছোট্ট লজিক টা যদি আমরা কনসিডার করি, তাহলে ঋণাত্মক সংহার জন্য  কম্পাইলার এর করা ভুল এড়িয়ে আমরা আমাদের কাঙ্খিত রেজাল্ট পেতে পারবো। অর্থাৎ,
 
 $$ 27 \mod 5 = ((27 \mod 5) + 5) \mod 5 = (2 + 5) \mod 5 = 7 \mod 5 = 2 $$
+
 $$ -27 \mod 5 = ((-27 \mod 5) + 5) \mod 5 = (-2 + 5) \mod 5 = 3 \mod 5 = 3 $$
 
 তাহলে এখন কোড টি হবে নিম্নরূপ, যা সকল সংখ্যার জন্য কার্যকর:
@@ -59,18 +61,26 @@ int getReminder(int n, int m) {
 এইবার মডুলার এরিথমেটিক অপারেশন নিয়ে কথা বলা যাক। ধরো, তোমার কাছে দুটি সংখ্যা আছে। এইবার তোমাকে বলা হলো, মূল সংখ্যা দুইটি কে যদি যোগ করা হতো, এবং অন্য একটি সংখ্যা দিয়ে ভাগ করা হতো, তাহলে ভাগশেষ কত হতো? কিছুক্ষন ভেবে নিতে পারো। যদি ভেবে কোনো সল্যুশন এর সন্ধান না পাও, তাহলে হতাশ না হয়ে নিচের অংশটুকু পড়ে ফেলো। 
 
 মনে করো, সংখ্যা দুটি ছিল যথাক্রমে *A* ও *B*, এবং যেই সংখ্যা দিয়ে ভাগ করতে বলা হয়েছে, তা হলো *m*। ম্যাথমেটিক্যালি বললে, আর তোমার কাছে জানতে চাওয়া হয়েছে $ (A+B) \mod m $ । যেহেতু আমাদের উত্তর দিতে হবে একটা ভাগশেষ, তাই শুরু থেকেই ভাগশেষ নিয়ে চিন্তা করা যাক। A ও B কে আমরা একটু ভেঙে লিখলে দাঁড়ায়,
+
 $$ A = m * Da + ra $$
+
 $$ B = m * Db + rb $$
 
 তাহলে চলো একটা অঙ্ক করে ফেলা যাক, 
+
 $$ (A+B) \mod m $$
+
 $$ = (m * Da + ra + m * Db + rb) \mod m $$
+
 $$ = (m * (Da + Db) + (ra + rb)) \mod m $$
+
 $$ = (m * (Da + Db)) \mod m + (ra + rb) \mod m $$
 
 
 *m * (Da + Db)* যেহেতু *m* এর গুণিতক, তাই এই অংশের ভাগশেষ শুন্য। 
+
 $$ = 0 + (ra + rb) \mod m $$
+
 $$ = (ra + rb) \mod m $$ 
 
 উপরোক্ত সমীকরণের আলোকে দেখা গেলো, আলটিমেট ইমপ্যাক্ট রাখছে জাস্ট দুটো সংখ্যা ra ও rb, যাদের একটা বড় পরিচয় আছে। তারা হচ্ছে যথাক্রমে A ও B এর ভাগশেষ। তাহলে আমরা আমাদের ফাইনাল গোলে এভাবে পৌঁছাতে পারি যে, 
